styles/style.css
/* ... */
@media only screen and (min-width: 1600px) {
    .sidebar {
        width: 10%;
    }
}

.sidebar-hidden {
    height: 100%;
    width: 0%;
    left: 0;
    top: 0;
    position: fixed;
    background-color: #ffbf00;
    padding: 0;
    margin: 0;
    overflow-x: hidden;
    overflow-y: hidden;
    transition: width 0.4s;
    z-index: 3;
}

.sidebar a:active, .sidebar-hidden a:active {
    color: white;
    text-decoration: underline;
}

.sidebar a, .sidebar-hidden a, .sidebar a:visited, .sidebar-hidden a:visited {
    color: blue;
    text-decoration: none;
}

.sidebar a:hover, .sidebar-hidden a:hover {
    color: black;
    opacity: 90%;
}

.sidebar span, .sidebar-hidden span {
    display: block;
    padding: 0;
    margin: 0;
    height: 10%;
    padding: 1rem;
    font-size: 16px;
}

.sidebar-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-bottom: 0;
    margin-bottom: 0;
}

.sidebar-title {
    flex: 1;
    font-size: 36px;
    font-family: 'Roboto-Black', system-ui;
    text-align: left;
    color: black;
    margin-left: 5%;
}

.theme-toggle {
    font-family: "Roboto-Medium", system-ui;
    padding: 10px;
    border: 2px solid white;
    border-radius: 10px;
    color: white;
    background-color: black;
    transition-duration: 0.4s;
}

.theme-toggle:hover {
    border: 2px solid black;
    background-color: white;
    color: black;
}

.sidebar-exit {
    flex: 0.01;
    text-align: right;
    margin-right: 5%;
}
/*------------------------------------------------------------------------------------*/

/*----------------------------------- Site Footer ------------------------------------*/
.site-footer {
    padding-top: 10px;
    text-align: center;
    font-size: x-small;
    height: 5em;
    flex-shrink: 0;
}

@media only screen and (min-width: 1200px) {
    .site-footer {
        font-size: small;
    }
}
/*------------------------------------------------------------------------------------*/

/*-------------------------------- Grid for Movie Lists ------------------------------*/
.year {
    font-family: "Roboto-Medium", system-ui;
    text-align: center;
    font-size: 28px;
}

.main-box {
    position: relative;
    margin: 0;
    width: 300px;
    /* padding-bottom: 1em; */
    /* margin-bottom: 1.5em; */
    /* background: black; (test border of container) */
    background: transparent;
    border-radius: 1em;
    /* box-shadow: inset 1px 1px black; */
}

@media only screen and (min-width: 1200px) {
    .main-box {
        width: 400px;
    }
}

.main-box img {
    max-width: 100%;
    width: 300px;
    height: 150px;
    object-fit: cover;
    border-radius: 1em;
    margin-left: auto;
    margin-right: auto;
}

@media only screen and (min-width: 1200px) {
    .main-box img {
        width: 400px;
        height: 200px;
    }
}

.main-box:after {
    content: "";
    position: absolute;
    left: 0;
    bottom: 1.2em;
    width: 100%;
    height: 75%;
    background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0.9) 100%) repeat 0 0;
    z-index: 1;
    border-radius: 1em;
    margin-top: 0;
    padding-top: 0;
    padding-bottom: -1em;
    margin-bottom: -1em;
}

.main-box-left {
    font-family: "Roboto-Black", system-ui;
    position: absolute;
    left: 0;
    bottom: 0;
    width: 50%;
    color: white;
    padding-top: 1em;
    padding-bottom: 2em;
    margin-left: 1em;
    z-index: 2;
}

.main-box-right {
    font-family: "Roboto-Medium", system-ui;
    position: absolute;
    right: 0;
    bottom: 0;
    width: 35%;
    color: white;
    z-index: 2; 
    text-align: right;
    padding-top: 1em;
    padding-bottom: 2em;
    margin-right: 1em;
}

.movie-grid {
    display: grid;
    grid-gap: 30px;
    grid-template-columns: 300px;
    grid-auto-columns: 300px;
    grid-auto-rows: 150px;
    grid-auto-flow: row;
    justify-content: center;
    align-items: center;
}

@media only screen and (min-width: 800px) {
    .movie-grid {
        grid-template-columns: 300px 300px;
    }
}

@media only screen and (min-width: 1200px) {
    .movie-grid {
        grid-template-columns: 400px 400px;
        grid-auto-columns: 400px;
        grid-auto-rows: 200px;
    }
}

@media only screen and (min-width: 1600px) {
    .movie-grid {
        grid-template-columns: 400px 400px 400px;
    }
}

@media only screen and (min-width: 2150px) {
    .movie-grid {
        grid-template-columns: 400px 400px 400px 400px;
    }
}

@media only screen and (min-width: 2700px) {
    .movie-grid {
        grid-template-columns: 400px 400px 400px 400px 400px;
    }
}
/*------------------------------------------------------------------------------------*/

/*-------------------------- Review Text Styling and Layout --------------------------*/
.review {
    text-align: center;
    font-size: large;
}

@media only screen and (min-width: 800px) {
    .review-title {
        font-size: 2em;
    }

    .review-subtitle {
        font-size: 1.1em;
    }
}

.section-quote {
    width: 90%;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    font-family: "Roboto-Black", system-ui;
}

.spoilers {
    margin: 1em 0em 0.25em 0em;
}

.spoilers hr {
    width: 50%;
    border-top: 3px solid #ffbf00;
    border-radius: 5px;
}

.spoilers p {
    text-align: center;
    margin-top: 0;
    margin-bottom: 0;
}

.review-text {
    font-size: large;
    width: 95%;
    text-align: left;
    margin-left: auto;
    margin-right: auto;
}

@media only screen and (min-width: 800px) {
    .review-text {
        width: 70%;
    }
}

@media only screen and (min-width: 1200px) {
    .review-text {
        width: 70%;
    }
}

@media only screen and (min-width: 1600px) {
    .review-text {
        font-size: x-large;
    }
}

.inline-photo {
    display: block;
    max-width: 100%;
    margin: 0;
    padding: 0;
}

.inline-photo img {
    height: auto;
    width: 90%;
}
/* ... */

